--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,13 @@ stages:
       vmImage: $(vmImageName)
 
     steps:
+    
+    task: UseDotNet@2
+    displayName: 'Use .NET 5 sdk'
+    inputs:
+        packageType: sdk
+        version: '5.0.x'
+    
     - task: DotNetCoreCLI@2
       displayName: Build
       inputs:
