Corrected error in yaml task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,9 +31,9 @@ stages:
 
     steps:
     
-    task: UseDotNet@2
-    displayName: 'Use .NET 5 sdk'
-    inputs:
+    - task: UseDotNet@2
+      displayName: 'Use .NET 5 sdk'
+      inputs:
         packageType: sdk
         version: '5.0.x'
     
