--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
     steps:
     
     - task: UseDotNet@2
-      displayName: 'Use .NET 5 sdk'
+      displayName: 'Use .NET Core 3.1 sdk'
       inputs:
         packageType: sdk
         version: '3.1.x'
